# EMplanner-for-personal-study-only-

./: CMakeLists.txt  README.md
figure/: 录屏 2024年06月26日 11时52分52秒.webm  录屏 2024年06月26日 16时29分27秒.webm
include/: define.h  em_planner.h  frenetUtils.h  matplotlibcpp.h  path_smoother.h  trajectory_NLP.h
mpich-4.1/: Makefile  config.lt  config.status  config.system  libtool  mpich-doxygen
mpich-4.1/doc/refman/: Makefile
mpich-4.1/examples/: Makefile  cpi
mpich-4.1/examples/.deps/: cpi.Po
mpich-4.1/examples/.libs/: cpi
mpich-4.1/lib/: libmpi.la  libmpicxx.la  libmpifort.la  newconfig
mpich-4.1/lib/.libs/: libmpi.lai  libmpicxx.lai  libmpicxx.so.12.2.4  libmpicxx.so.12.2.4T  libmpifort.lai  libmpifort.so.12.2.4  libmpifort.so.12.2.4T
mpich-4.1/modules/json-c/: Makefile  config.h  config.status  json-c-uninstalled.pc  json-c.pc  libtool
mpich-4.1/modules/libfabric/: Makefile  config.h  config.lt  config.status  libfabric.pc  libpsm3.la  libtool
mpich-4.1/modules/yaksa/: Doxyfile  Makefile  config.status  libtool  libyaksa.la
mpich-4.1/src/env/: mpichversion  mpifort.bash  mpifort.sh  mpivars
mpich-4.1/src/include/: mpi.h  mpichconf.h  mpichinfo.h
mpich-4.1/src/mpi_t/: lib_libmpi_la-events_impl.lo  lib_libmpi_la-mpit_impl.lo  lib_libmpi_la-pvar_impl.lo  lib_libmpi_la-qmpi_register.lo
mpich-4.1/src/mpl/: Makefile  config.status  libtool  localdefs
mpich-4.1/src/pmi/: Makefile  config.status  libpmi.la  libtool
mpich-4.1/test/: Makefile
src/: em_planner.cpp  frenetUtils.cpp  main.cpp  mpi_test.cpp  path_smoother.cpp  test.cpp  trajectory_NLP.cpp
(+3515 files in other folders)
